--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 OPENAI_API_KEY=
 AGENT_NAME=Eliza
 DEBUG=true
-RESPOND_TO_USER_INPUT=true
 DEFAULT_TEXT_MODEL=gpt-3.5-turbo-0613
+LONG_TEXT_MODEL=gpt-3.5-turbo-16k-0613
