--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 OPENAI_API_KEY=
-AGENT_NAME=Eliza
+AGENT_NAME=assistant
 DEBUG=true
 DEFAULT_TEXT_MODEL=gpt-3.5-turbo-0613
 LONG_TEXT_MODEL=gpt-3.5-turbo-16k-0613
+TOKENIZERS_PARALLELISM=false
+UPDATE_INTERVAL=10
