Simplify code, remove text templates, fix some noob rails

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 OPENAI_API_KEY=
 AGENT_NAME=assistant
-DEBUG=true
 DEFAULT_TEXT_MODEL=gpt-3.5-turbo-0613
 LONG_TEXT_MODEL=gpt-3.5-turbo-16k-0613
 TOKENIZERS_PARALLELISM=false
+DEFAULT_MAX_TOKENS=4000
 UPDATE_INTERVAL=10
